# FlameBot

./: .gitignore  ARCH_LINUX.md  CMakeLists.txt  CMakeLists_CLI.txt  CMakeLists_GUI.txt  README.md  test_dll.py
.cache/clangd/index/: BoardHash.cpp.1E22E198107BF512.idx  BoardHash.h.E029D2A0B2977581.idx  Chess.cpp.68AD2D87A2439208.idx  Chess.h.E31F3AB40A0ACE5C.idx  FlameBoth.cpp.F2ACC41D8A5AC6FB.idx  FlameBoth.h.01DA11712F4EDF0C.idx  OpeningBook.cpp.49D07D654FD366F1.idx  OpeningBook.h.0625C50321653919.idx  Time.cpp.717936F65A96D170.idx  Time.h.0D7071E0A220716A.idx  main.cpp.4F6A474804566323.idx
CmakeListss/: CMakeLists_UCI.txt
gui/: index.html  main.js  package.json  preload.js
gui/css/: style.css
gui/js/: app.js  board.js  game.js  pieces.js
scripts/: install-arch.sh  package-linux.sh
src/: FlameBot_API.cpp  FlameBot_API.h  Game.cpp  main.cpp
src/BoardHash/: BoardHash.cpp  BoardHash.h
src/Chess/: Chess.cpp  Chess.h
src/ChessApp/: ChessApp.cpp
src/FlameBoth/: FlameBoth.cpp  FlameBoth.h
src/OpeningBook/: OpeningBook.cpp  OpeningBook.h  converter.py
ucibuild/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
